kustomize/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-comment-section
spec:
  selector:
    matchLabels:
      app: simple-comment-section
  template:
    metadata:
      labels:
        app: simple-comment-section
    spec:
      containers:
      - name: simple-comment-section
        image: yungen/simple-comment-section:latest
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000
